# agente

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  INICIAR-BACKEND-LOCAL.bat  INICIAR-FRONTEND.bat  INICIAR-TUDO.bat  PARAR-TUDO.bat  README.md  alembic.ini  docker-compose.proxy.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  http_client.py  logging_config.py  redis_client.py  roles.py  security.py
app/db/: base.py  init_db.py  session.py
app/integrations/: evolution_client.py  openai_client.py
app/middlewares/: request_logging.py
app/models/: __init__.py  ai.py  auth.py  billing.py  business.py  company.py  conversation.py  operations.py  whatsapp.py
app/repositories/: ai_repository.py  billing_repository.py  business_repository.py  company_repository.py  conversation_repository.py  metric_repository.py  user_repository.py  whatsapp_repository.py
app/schemas/: ai.py  auth.py  billing.py  business.py  common.py  company.py  conversation.py  operations.py  user.py  webhook.py  whatsapp.py
app/services/: agent_service.py  (+10 more)
docs/: architecture.md  deploy-vps.md  roadmap.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
migrations/: env.py
scripts/: bootstrap.py  reset_platform.sql  start-worker.ps1  start-worker.sh  start.ps1  start.sh
tests/: conftest.py  test_auth.py  test_health.py  test_helpers.py  test_operations.py  test_webhook.py  test_whatsapp_instances.py
(+148 files in other folders)
